# ShapesWar-SFML

./: .gitignore  CMakeLists.txt  README.md
assets/: config.txt
src/: Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  main.cpp  vec2.cpp  vec2.h
